--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-mongoDB_URL = 'mongodb+srv://divyaanilkumar24:DivyaA@cluster0.9cajpnn.mongodb.net/employeeDB?retryWrites=true&w=majority&appName=Cluster0'
+mongoDB_URL = 'mongodb+srv://aromal:aromal2002@cluster0.q7mal.mongodb.net/mernDb?retryWrites=true&w=majority&appName=Cluster0'
